# us-amex-offer-hunter

./: .cursorrules  .env.sample  .gitignore  CONVERSATION_NOTES.md  Makefile  README.md  config.yaml  pyproject.toml  requirements.txt
docs/: DESIGN.md  ROADMAP.md
src/: main.py
src/core/: __init__.py  settings.py
src/us_amex_offer_hunter/: __init__.py
src/us_amex_offer_hunter/cli/: main.py
src/us_amex_offer_hunter/core/: engine.py
src/us_amex_offer_hunter/notifier/: base.py  discord_bot.py
tests/: conftest.py  test_main.py  test_notifier_discord.py  test_selenium.py  test_settings.py
